--- a/templates/refining_rx_zero/index.ejs
+++ b/templates/refining_rx_zero/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {
-  SEO:false, 
+  SEO:true, 
   Title:`The Evolution of LASO Local & Telehealth to RX Zero by Vicky Wang`, 
   description:'', 
   pageURL:'/worksamples/BYP_LH_wsbeebr/LHRefiningRXZero/',
@@ -161,6 +161,9 @@
       </div>
 
     </div>
+
+    
+    <div class="blankHM"></div>
 
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--full u-textCenter">
@@ -345,10 +348,8 @@
         <div class="TBcarousel Grid--center Grid Grid--full Grid--gutters u-textCenter " aria-label="TBcarousel" tabindex="0" id="TBcarousel1">
           <div class="TBslides">
             <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
-              <div class="Grid Grid--gutters Grid--1of3 Grid--center">
-                <div class="Grid-cell">
-                  <img src="Slideshow1_left.png" alt="">
-                </div>
+              <div class="Grid Grid--gutters Grid--full">
+    
                 <div class="Grid-cell">
                   <div class="element">
                     <img class="cardImgCropWS " src="Slideshow1.png" alt="">
@@ -357,10 +358,8 @@
               </div>
             </div>
             <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0">
-              <div class="Grid Grid--gutters Grid--1of3 Grid--center">
-                <div class="Grid-cell">
-                  <img src="Slideshow2_left.png" alt="">
-                </div>
+              <div class="Grid Grid--gutters Grid--full">
+     
                 <div class="Grid-cell">
                   <div class="element">
                     <img class="cardImgCropWS " src="Slideshow2.png" alt="">
@@ -369,10 +368,8 @@
               </div>
             </div>
             <div class="TBslidesItem slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0">
-              <div class="Grid Grid--gutters Grid--1of3 Grid--center">
-                <div class="Grid-cell">
-                  <img src="Slideshow3_left.png" alt="">
-                </div>
+              <div class="Grid Grid--gutters Grid--full">
+
                 <div class="Grid-cell">
                   <div class="element">
                     <img class="cardImgCropWS " src="Slideshow3.png" alt="">
@@ -382,10 +379,8 @@
             </div>
 
             <div class="TBslidesItem slide-3" id="slide-3" aria-label="slide 4 of 5" tabindex="0">
-              <div class="Grid Grid--gutters Grid--1of3 Grid--center">
-                <div class="Grid-cell">
-                  <img src="Slideshow3_left.png" alt="">
-                </div>
+              <div class="Grid Grid--gutters Grid--full">
+   
                 <div class="Grid-cell">
                   <div class="element">
                     <img class="cardImgCropWS " src="Slideshow4.png" alt="">
@@ -394,10 +389,8 @@
               </div>
             </div>
             <div class="TBslidesItem slide-3" id="slide-3" aria-label="slide 5 of 5" tabindex="0">
-              <div class="Grid Grid--gutters Grid--1of3 Grid--center">
-                <div class="Grid-cell">
-                  <img src="Slideshow3_left.png" alt="">
-                </div>
+              <div class="Grid Grid--gutters Grid--full">
+      
                 <div class="Grid-cell">
                   <div class="element">
                     <img class="cardImgCropWS " src="Slideshow5.png" alt="">
@@ -428,6 +421,8 @@
 
       </div>
     </div>
+    <div class="blankHM"></div>
+
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--full u-textCenter">
         <%- include(`${templatePath}/shared/comp_textualElements_title`, {
