--- a/templates/shared/block_nav_footer.ejs
+++ b/templates/shared/block_nav_footer.ejs
@@ -6,15 +6,13 @@
       <div class="element">
         <div class="Grid Grid--gutters Grid--1of3">
           <div class="Grid-cell">
-
-            <a href="/" class=""><img class="widthXXS" src="<%= websitePath %>/icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
-            <div class="blankHXS"></div>
-
+            <div class="element">
+              <a href="/" class=""><img class="widthXXS" src="<%= websitePath %>/icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+            </div>
             <div class="Grid Grid--gutters">
               <div class="ClipboardBoxIconOnly">
                 <button class="ClipboardIconOnly">
-                  <img title="Copy Email Address to Clipboard" class="iconM hoverGrey300 paddingS borderRadiusMax"
-                    title="Copy to Clipboard" src="<%= websitePath %>/icon/mail.svg" alt="LinkedIn">
+                  <img title="Copy Email Address to Clipboard" class="iconM hoverGrey300 paddingS borderRadiusMax" title="Copy to Clipboard" src="<%= websitePath %>/icon/mail.svg" alt="LinkedIn">
                   <p class="clickIconCopy">vickyw.design@gmail.com</p>
                 </button>
               </div>
@@ -23,8 +21,7 @@
               </a>
 
               <a target="_blank" href="https://github.com/vicky-wyq">
-                <img class="iconM hoverGrey300 paddingS borderRadiusMax" src="<%= websitePath %>/icon/git.svg" alt="GitHub"
-                  title="GitHub">
+                <img class="iconM hoverGrey300 paddingS borderRadiusMax" src="<%= websitePath %>/icon/git.svg" alt="GitHub" title="GitHub">
               </a>
 
               <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
@@ -37,28 +34,50 @@
           <div class="Grid-cell">
             <div class="Grid Grid--gutters Grid--cols-6">
               <div class="Grid-cell">
-                <h5> <strong> Project </strong> </h5>
+                <h5> <strong> Projects </strong> </h5>
                 <div class="blankHXXS"></div>
-                <a href="/glorify/">
-                  <h6 class="fontWeight400"> Glorify</h6>
+                <a href="/refining_rx_zero/">
+                  <h6 class="fontWeight400"> RX Zero</h6>
                 </a>
+                <h6>The Evolution of LASO Local & Telehealth to RX Zero</h6>
 
 
-                <h6>Elevating Community Involvement</h6>
                 <div class="blankHXXS"></div>
-                <a href="/appointa/">
-                  <h6 class="fontWeight400"> APPOINTA</h6>
+                <a href="/savings_explorer/">
+                  <h6 class="fontWeight400"> RX Zero Savings Explorer</h6>
 
                 </a>
-                <h6>Simplifying Interview Coordination</h6>
-                <div class="blankHXXS"></div>
-                <a href="/seer/">
-                  <h6 class="fontWeight400">SEER</h6>
+                <h6>Uncover Prescription Meds Savings</h6>
 
+                <div class="blankHXXS"></div>
+                <a href="/admin_panel/">
+                  <h6 class="fontWeight400">Admin Panel</h6>
                 </a>
                 <h6>Empowering Brand Managers with Insights</h6>
               </div>
 
+
+              <div class="Grid-cell">
+                <h5> <strong> Experiments </strong> </h5>
+                <div class="blankHXXS"></div>
+                <a href="/glorify/">
+                  <h6 class="fontWeight400"> Glorify</h6>
+                </a>
+                <h6>Elevating Community Involvement</h6>
+
+                <div class="blankHXXS"></div>
+                
+                <a href="/appointa/">
+                  <h6 class="fontWeight400"> APPOINTA</h6>
+                </a>
+                <h6>Simplifying Interview Coordination</h6>
+
+                <div class="blankHXXS"></div>
+                <a href="/seer/">
+                  <h6 class="fontWeight400">SEER</h6>
+                </a>
+                <h6>Empowering Brand Managers with Insights</h6>
+              </div>
               <div class="Grid-cell">
                 <h5> <strong> Service </strong> </h5>
                 <div class="blankHXXS"></div>
