url + sitemap fix

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -181,9 +181,9 @@
 
         <%- include(`${templatePath}/shared/block_cardNoPassword`, {
           hoverBorderColor:`LASO`,
-          cardNoPwURL:`${websitePath}/savings_explorer/`,
+          cardNoPwURL:`${websitePath}/savings_calculator/`,
           cardNoPwImgURL:`${websitePath}/projectImages/Cover_LASO_CostCalculator.png`,
-          cardNoPwTitle: `RX Zero Savings Explorer: Uncover Prescription Meds Savings`, 
+          cardNoPwTitle: `RX Zero Savings Calculator: Uncover Prescription Meds Savings`, 
           cardNoPwDescription:`This tool enables users to compare their current medication costs with the RX Zero subscription model, offering a seamless experience that simplifies making healthcare financial decisions.` 
           }) %>
 
