--- a/templates/intro/index.ejs
+++ b/templates/intro/index.ejs
@@ -59,7 +59,7 @@
       </li>
       <li class='item' style="background-image: url('LASO_CostCalculator.png')">
         <div class='content'>
-          <h2 class='title colorLASObule700'>RX Zero Savings Explorer</h2>
+          <h2 class='title colorLASObule700'>RX Zero Savings Calculator</h2>
           <p class='description colorLASObule700'> Cost-benefit Calculator: a tool enables users to compare their current medication costs with the RX Zero subscription model</p>
           <a href="/"><button class="intro">View Project</button></a>
         </div>
