--- a/templates/savings_calculator/index.ejs
+++ b/templates/savings_calculator/index.ejs
@@ -21,7 +21,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHCost_benefitCalculator/', thumbnailImgURL
     }) %>
 
   <%- include(`${templatePath}/shared/block_banner`, { 
-    bannerTitle:`RX Zero Savings Explorer: Uncover Prescription Meds Savings`,
+    bannerTitle:`RX Zero Savings Calculator: Uncover Prescription Meds Savings`,
     bannerSubTitle:`Compare current medication costs with the RX Zero subscription model`,
     bannerLogoUrl:`${websitePath}/worksamples/BYP_LH_wsbeebr/logo_LASO_darkBlue.svg`,
     bannerBgColor: `colorBgLASO`,
