--- a/templates/glorify/index.ejs
+++ b/templates/glorify/index.ejs
@@ -158,7 +158,7 @@
     <!-- Slideshow Title -->
 
     <div class="paddingM wrapper">
-      <div class="rowToColumn cardGlorifyBg shadowBox centerVer">
+      <div class="rowToColumn cardGlorifyBg cardGlorify shadowBox centerVer ">
         <div class="widthMax paddingM">
           <h4>Glorify is a mobile app offering an expansive library of resources designed to aid Christians in their
             spiritual journey. From daily devotionals to scripture readings and prayer guides, the app aims to be a
