--- a/templates/savings_calculator/index.ejs
+++ b/templates/savings_calculator/index.ejs
@@ -21,8 +21,8 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHCost_benefitCalculator/', thumbnailImgURL
     }) %>
 
   <%- include(`${templatePath}/shared/block_banner`, { 
-    bannerTitle:`RX Zero Savings Calculator: Uncover Prescription Meds Savings`,
-    bannerSubTitle:`Compare current medication costs with the RX Zero subscription model`,
+    bannerTitle:`RX Zero Savings Calculator`,
+    bannerSubTitle:`Uncover Prescription Meds Savings`,
     bannerLogoUrl:`${websitePath}/worksamples/BYP_LH_wsbeebr/logo_LASO_darkBlue.svg`,
     bannerBgColor: `colorBgLASO`,
     bannerMockupL:`MockupL.png`,
