--- a/templates/byp_b2b_SaaS/index.ejs
+++ b/templates/byp_b2b_SaaS/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:false, Title:`Revolutionizing User Experience: A Comprehensive Redesign of the BookYourPet Platform by Vicky Wang`, 
-description:'', 
+description:'byp_b2b_subscription', 
 pageURL:'worksamples/BYP_LH_wsbeebr/', thumbnailImgURL: 'vickywang_web.png'
 }) %>
 <!--Head-->
@@ -12,7 +12,7 @@ pageURL:'worksamples/BYP_LH_wsbeebr/', thumbnailImgURL: 'vickywang_web.png'
   <%- include(`${templatePath}/shared/block_nav_header`, {
     type:'backText', 
     currentPage: 'PROJECT',
-    PageUrl:`${websitePath}/worksamples/BYP_LH_wsbeebr` 
+    PageUrl:`${websitePath}/` 
     }) %>
 
   <%- include(`${templatePath}/shared/block_banner`, { 
