--- a/templates/byp_b2b_subscription/index.ejs
+++ b/templates/byp_b2b_subscription/index.ejs
@@ -3,7 +3,7 @@
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:false, Title:`Mastering B2B SaaS Subscription Success by Vicky Wang`, 
 description:'', 
-pageURL:'worksamples/BYP_LH_wsbeebr/', thumbnailImgURL: 'vickywang_web.png'
+pageURL:'/byp_b2b_subscription/', thumbnailImgURL: 'vickywang_web.png'
 }) %>
 <!--Head-->
 
@@ -12,7 +12,7 @@ pageURL:'worksamples/BYP_LH_wsbeebr/', thumbnailImgURL: 'vickywang_web.png'
   <%- include(`${templatePath}/shared/block_nav_header`, {
     type:'backText', 
     currentPage: '',
-    PageUrl:`${websitePath}/worksamples/BYP_LH_wsbeebr` 
+    PageUrl:`${websitePath}/` 
     }) %>
 
   <%- include(`${templatePath}/shared/block_banner`, { 
