--- a/templates/shared/block_nav_header2024.ejs
+++ b/templates/shared/block_nav_header2024.ejs
@@ -3,20 +3,20 @@
       <div class="backgroundColorNav">
         <a href="/"><img class="logo pointer" src="/icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
         <div class="navbar">
-          <ul class="nav-menu">
-            <li class="nav-item marginZero active activeNav">
-                <a href="<%- sectionURL1 %>" class="nav-link box">PROJECTS</a>
+          <ol class="nav-menu">
+            <li class="nav-item active activeNav box">
+                <a href="<%- sectionURL1 %>" class="nav-link">PROJECTS</a>
               </li>
-            <li class="nav-item marginZero active activeNav">
-              <a href="<%- sectionURL2 %>" class="nav-link box">EXPERIMENTS</a>
+            <li class="nav-item active activeNav box">
+              <a href="<%- sectionURL2 %>" class="nav-link ">EXPERIMENTS</a>
             </li>
-            <li class="nav-item marginZero active activeNav">
-                <a href="<%- sectionURL3 %>" class="nav-link box">DESIGN SYSTEM</a>
+            <li class="nav-item active activeNav box">
+                <a href="<%- sectionURL3 %>" class="nav-link ">DESIGN SYSTEM</a>
               </li>
-            <li class="nav-item marginZero active activeNav">
-              <a href="<%- sectionURL4 %>" class="nav-link box">ABOUT</a>
+            <li class="nav-item active activeNav box">
+              <a href="<%- sectionURL4 %>" class="nav-link ">ABOUT</a>
             </li>
-          </ul>
+          </ol>
         </div>
         <div class="hamburger">
           <span class="bar"></span>
